<resources>
    <string name="app_name">Eviler Hangman</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hangman_logo">Hangman Logo</string>
    <string name="singleplayer">Singleplayer</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="title"><u>Eviler Hangman</u></string>
    <string name="default_blank">_ _ _ _ _ _ _</string>
    <string name="default_guessed">Guessed: </string>
    <string name="submit_hint">Enter a letter</string>
    <string name="button_text">Submit Guess</string>
    <string name="default_attempts">Attempts Remaining: </string>
    <string name="default_characters">a b c</string>
    <string name="default_attempt_number">6</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lacinia mi volutpat, dapibus lacus quis, ultricies velit.</string>
    <string name="about_the_game">About the Game</string>
    <string name="about_the_authors">About the Authors</string>
    <string name="available_contacts">Available Contacts</string>
    <string name="aboutTitle">About</string>
    <string name="helpTitle">Help</string>
    <string name="how_to_play">How to Play</string>
    <string name="settings_info">Settings Info</string>
    <string name="result_image">Result Image</string>
    <string name="default_result">You Defaulted!</string>
    <string name="play_again">Play Again?</string>
    <string name="main_menu">Main Menu?</string>
    <string name="revealedWordLabel">The word was:</string>
    <string name="defaultWord">Default</string>
    <string name="settingsTitle">Settings</string>
    <string name="game_mode">Game Mode</string>
    <string name="good_setting">Good Hangman</string>
    <string name="normal_setting">Normal Hangman</string>
    <string name="evil_setting">Evil Hangman</string>
    <string name="difficultyTitle">Difficulty</string>
    <string name="easyDifficulty">Easy</string>
    <string name="mediumDifficulty">Medium</string>
    <string name="hardDifficulty">Hard</string>
    <string name="you_won">You won!</string>
    <string name="you_lost">You lost!</string>
    <string name="word_length">Word Length</string>
    <string name="button_change_text">Submit Change</string>
    <string-array name="words"></string-array>
    <string name="p1guessed">Player 1 guessed %c</string>
    <string name="singleplayer_title">Singleplayer</string>
    <string name="singleplayer_details">Singleplayer is quite straight forward. Make a guess and try to get the word correct.</string>
    <string name="multiplayer_title">Multiplayer</string>
    <string name="multiplayer_details">Multiplayer is a bit different. Player 1 makes a guess then passes the phone to player 2. Player 2 then chooses a word to either go with or against player 1. Then they hand the phone back to player 1.</string>
    <string name="settings_info_details">There are many settings in the game. You can choose the word length or change difficulty and mode.\n\n
        The modes are as follows: Evil, Good, or Normal.\n\n
        Normal is the normal Hangman that you play where you make a guess and the word doesn\'t change.\n
        Good changes the word as you play, choosing from the smallest amount of words it can be, based off of your guess.\n\n
        Evil changes the word as you play, choosing from the largest amount of words it can be, based off of your guess.\n\n
        The difficulties are as follows: Easy, Medium, Hard.\n\n
        Easy gives you twice the lives, Medium gives you the base amount of lives, and Hard gives you half the lives.
    </string>
    <string name="aboutgame_details">Eviler Hangman is a game that takes the guessing of Hangman and makes it a whole lot worse. In normal hangman you make a guess and if you are right then the letters get filled in.\n
        If you get it wrong, then a piece of the stick man is drawn on the gallows. The reason why Eviler Hangman makes this worse is that every guess, whether right or wrong, changes the word on you.\n
        Making the difficulty of the guessing much harder. Because although you might think it\'s a certain word, no matter what you guess, the word will change. Unless you are able to guess correctly until the very last letter.\n
    </string>
    <string name="aboutauthors_details">We are a group of software engineers that have gone through the many classes required to get this far in our curriculum.\n
        The one thing that stuck with us was this game we made back in our Computing II class called Evil hangman. It was a nightmare to code and make from scratch.\n
        However we all thought it would be fun to make the game we could only see on a terminal screen into a game we could visually see graphically and interact with properly.\n
        We also wanted to put our own twist on the game, so we added many settings you could adjust and even added multiplayer to the game.\n
        This definitely was a fun project that wouldn\'t have been possible without first going through the difficulty of the original game.\n
    </string>
    <string name="enter_a_word">Enter a word</string>
</resources>