<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultScreenFragment">

    <ImageView
        android:id="@+id/resultImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/you_win"
        android:contentDescription="@string/result_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp" />

    <TextView
        android:id="@+id/resultMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_result"
        android:textSize="28sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/resultImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/revealedWordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/revealedWordLabel"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/resultMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/revealedWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:text="@string/defaultWord"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/revealedWordLabel"
        app:layout_constraintTop_toTopOf="@+id/revealedWordLabel" />

    <Button
        android:id="@+id/playAgainButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_again"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@id/revealedWordLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp" />

    <Button
        android:id="@+id/mainMenuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_menu"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@id/playAgainButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>